This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


next version - not released yet
===============================
* Updated Unrar to v5.0.0.13
! Ticket #3668, MPC-HC could crash when reloading the subtitles


1.7.1 - 17 November 2013
========================
+ Ticket #2655, Internal filters: Support WMV/ASF/DVR-MS splitting
+ Ticket #3548, Add British English translation
+ Ticket #3590, Internal filters: Support for HEVC and VP9
+ Ticket #3605, Support playlists using UTF8 encoding without BOM
+ Ticket #3643, Add Slovenian translation
* Ticket #3569/#3679/#3680, Disable internal WMV/ASF/DVR-MS splitting and WMV decoding by default
  since Microsoft filters are generally more stable
* Updated French, German, Polish, Portuguese (Brazil) and Simplified Chinese translations
* Updated LAV Filters to 0.59.1.26:
    - Ticket #3576, LAV Video: Support H264 Annex B format in MP4 files
    - Ticket #3601, LAV Video: Fix a crash with DXVA on AMD cards when stopping playback
    - Ticket #3676, LAV Audio: Fix a crash when using old versions of the ArcSoft DTS Decoder
      to handle DTS decoding internally
    - Ticket #3688, LAV Audio: Fix a freeze when changing the bitstreaming settings when paused
* Updated VirtualDub to v1.10.4
* Updated Unrar to v5.0.0.12
* Updated Little CMS to v2.6b (git 69ecafd)
! DVD: The chapter marks could be wrong for some titles
! Ticket #1478, Slightly improve the precision of the frame number in the "Go To" dialog.
  The frame number was sometimes off by 1. This was easily noticeable when doing frame-stepping
! Ticket #1555, Use elapsed/remaining time for the chapter change OSD depending on what is selected
  for the time display. Also prevent the OSD from blinking when changing the chapter
! Ticket #3518, Improve the reliability of the [DXVA] indicator in the status bar. Sometimes